feat: implement blind auction api (#50)
